changed layout structure and added new audio file

--- a/project/data/PDI/Data_Munge.ipynb
+++ b/project/data/PDI/Data_Munge.ipynb
@@ -311,23 +311,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'sf_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-ca02e78d989e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlocations_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msf_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mix\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'Y'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'X'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mlocations\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlocations_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'sf_df' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "locations_df = sf_df.ix[:, ['Y', 'X']]\n",
     "locations = locations_df.as_matrix()"
@@ -342,13 +330,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/arthur/Documents/Courses/1s2017/IA369/tasks/T3/project/data/PDI\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "with open('../web_page/js/crimeLatitudes.js', 'w') as f:\n",
+    "with open('../../js/crimeLatitudes.js', 'w') as f:\n",
     "    f.write('var crimeLatitudes = [\\n')\n",
     "    for location in locations[:-1]:\n",
     "        f.write('{0},\\n'.format(location[0]))\n",
@@ -358,13 +365,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "with open('../web_page/js/crimeLongitudes.js', 'w') as f:\n",
+    "with open('../../js/crimeLongitudes.js', 'w') as f:\n",
     "    f.write('var crimeLongitudes = [\\n')\n",
     "    for location in locations[:-1]:\n",
     "        f.write('{0},\\n'.format(location[1]))\n",
