--- a/project/data/PDI/Data_Munge.ipynb
+++ b/project/data/PDI/Data_Munge.ipynb
@@ -1,8 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data munge of the SF Police Departments Incidents \n",
+    "\n",
+    "This notebook will:\n",
+    "\n",
+    "* Select the incidentes categories that are a threat to tourists\n",
+    "* Save them in appropriat formats for use by the webpage"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -22,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -165,7 +177,7 @@
        "4  (37.7912255174119, -122.404195424821)  16002116075025  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,12 +191,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Filter relevant columns"
+    "## Filter relevant columns\n",
+    "\n",
+    "Not all incidents type are a threat to tourists. For instance, burglary is not a major problem for non-residents"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -205,7 +219,7 @@
        "       'GAMBLING', 'TREA'], dtype=object)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -254,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -268,7 +282,7 @@
        "       'SEX OFFENSES, FORCIBLE', 'ARSON', 'KIDNAPPING'], dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,8 +292,8 @@
     "    \n",
     "    sf_df = sf_df[sf_df.Category.str.contains(crime) == False]\n",
     "\n",
-    "#sf_df = sf_df.ix[:, ['Category', 'DayOfWeek', 'Date', 'Time', 'PdDistrict', 'Resolution', 'Address', 'Location']]\n",
-    "sf_df = sf_df.ix[:, ['Category', 'Y', 'X']]\n",
+    "sf_df = sf_df.ix[:, ['Category', 'DayOfWeek', 'Date', 'Time', 'PdDistrict', 'Resolution', 'Address', 'Location']]\n",
+    "#sf_df = sf_df.ix[:, ['Category', 'Y', 'X']]\n",
     "sf_df.Category.unique()"
    ]
   },
@@ -287,12 +301,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Rename categories"
+    "## Rename categories\n",
+    "\n",
+    "Rename some categories to make identification of the type of crime easier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -306,12 +322,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Crime locations"
+    "## Crime locations\n",
+    "\n",
+    "This is the current solution to plot the safety circle. **It will be deprecated in the near future**."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -325,7 +343,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save js arrays"
+    "### Save js arrays\n",
+    "\n",
+    "save locations in javascript arrays. **This is a poor solution and it will be deprecated in the future**."
    ]
   },
   {
@@ -358,6 +378,147 @@
     "        f.write('{0},\\n'.format(location[1]))\n",
     "    f.write('{0}\\n'.format(locations[-1][1])) # No comma\n",
     "    f.write(']')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## New solution\n",
+    "\n",
+    "Save the dataframe of interest as a json. The dataframe will have more columns besides 'Y' and 'X'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sf_df.to_json(\n",
+    "    path_or_buf='sfCrimeTourist2016.json', \n",
+    "    orient='records')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Category</th>\n",
+       "      <th>DayOfWeek</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>PdDistrict</th>\n",
+       "      <th>Resolution</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>Location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PROSTITUTION</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>01/08/2016 12:00:00 AM</td>\n",
+       "      <td>12:00</td>\n",
+       "      <td>CENTRAL</td>\n",
+       "      <td>ARREST, BOOKED</td>\n",
+       "      <td>300 Block of KEARNY ST</td>\n",
+       "      <td>(37.7912255174119, -122.404195424821)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>PROSTITUTION</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>01/08/2016 12:00:00 AM</td>\n",
+       "      <td>12:00</td>\n",
+       "      <td>CENTRAL</td>\n",
+       "      <td>ARREST, BOOKED</td>\n",
+       "      <td>300 Block of KEARNY ST</td>\n",
+       "      <td>(37.7912255174119, -122.404195424821)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>PROSTITUTION</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>01/08/2016 12:00:00 AM</td>\n",
+       "      <td>12:00</td>\n",
+       "      <td>CENTRAL</td>\n",
+       "      <td>ARREST, BOOKED</td>\n",
+       "      <td>300 Block of KEARNY ST</td>\n",
+       "      <td>(37.7912255174119, -122.404195424821)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>THEFT</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>01/08/2016 12:00:00 AM</td>\n",
+       "      <td>14:30</td>\n",
+       "      <td>NORTHERN</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>1200 Block of VANNESS AV</td>\n",
+       "      <td>(37.7868516471087, -122.421441956086)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>DRUG</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>01/08/2016 12:00:00 AM</td>\n",
+       "      <td>15:46</td>\n",
+       "      <td>TENDERLOIN</td>\n",
+       "      <td>ARREST, BOOKED</td>\n",
+       "      <td>GOLDEN GATE AV / HYDE ST</td>\n",
+       "      <td>(37.7816542806076, -122.415508242782)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Category DayOfWeek                    Date   Time  PdDistrict  \\\n",
+       "0  PROSTITUTION    Friday  01/08/2016 12:00:00 AM  12:00     CENTRAL   \n",
+       "1  PROSTITUTION    Friday  01/08/2016 12:00:00 AM  12:00     CENTRAL   \n",
+       "2  PROSTITUTION    Friday  01/08/2016 12:00:00 AM  12:00     CENTRAL   \n",
+       "5         THEFT    Friday  01/08/2016 12:00:00 AM  14:30    NORTHERN   \n",
+       "8          DRUG    Friday  01/08/2016 12:00:00 AM  15:46  TENDERLOIN   \n",
+       "\n",
+       "       Resolution                   Address  \\\n",
+       "0  ARREST, BOOKED    300 Block of KEARNY ST   \n",
+       "1  ARREST, BOOKED    300 Block of KEARNY ST   \n",
+       "2  ARREST, BOOKED    300 Block of KEARNY ST   \n",
+       "5            NONE  1200 Block of VANNESS AV   \n",
+       "8  ARREST, BOOKED  GOLDEN GATE AV / HYDE ST   \n",
+       "\n",
+       "                                Location  \n",
+       "0  (37.7912255174119, -122.404195424821)  \n",
+       "1  (37.7912255174119, -122.404195424821)  \n",
+       "2  (37.7912255174119, -122.404195424821)  \n",
+       "5  (37.7868516471087, -122.421441956086)  \n",
+       "8  (37.7816542806076, -122.415508242782)  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sf_df.head()"
    ]
   },
   {
