Substitute data crime js array declaration for JSON fetched from GitHub

--- a/project/data/PDI/Data_Munge.ipynb
+++ b/project/data/PDI/Data_Munge.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -177,7 +177,7 @@
        "4  (37.7912255174119, -122.404195424821)  16002116075025  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -219,7 +219,7 @@
        "       'GAMBLING', 'TREA'], dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -282,7 +282,7 @@
        "       'SEX OFFENSES, FORCIBLE', 'ARSON', 'KIDNAPPING'], dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -406,119 +406,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Category</th>\n",
-       "      <th>DayOfWeek</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Time</th>\n",
-       "      <th>PdDistrict</th>\n",
-       "      <th>Resolution</th>\n",
-       "      <th>Address</th>\n",
-       "      <th>Location</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>PROSTITUTION</td>\n",
-       "      <td>Friday</td>\n",
-       "      <td>01/08/2016 12:00:00 AM</td>\n",
-       "      <td>12:00</td>\n",
-       "      <td>CENTRAL</td>\n",
-       "      <td>ARREST, BOOKED</td>\n",
-       "      <td>300 Block of KEARNY ST</td>\n",
-       "      <td>(37.7912255174119, -122.404195424821)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>PROSTITUTION</td>\n",
-       "      <td>Friday</td>\n",
-       "      <td>01/08/2016 12:00:00 AM</td>\n",
-       "      <td>12:00</td>\n",
-       "      <td>CENTRAL</td>\n",
-       "      <td>ARREST, BOOKED</td>\n",
-       "      <td>300 Block of KEARNY ST</td>\n",
-       "      <td>(37.7912255174119, -122.404195424821)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>PROSTITUTION</td>\n",
-       "      <td>Friday</td>\n",
-       "      <td>01/08/2016 12:00:00 AM</td>\n",
-       "      <td>12:00</td>\n",
-       "      <td>CENTRAL</td>\n",
-       "      <td>ARREST, BOOKED</td>\n",
-       "      <td>300 Block of KEARNY ST</td>\n",
-       "      <td>(37.7912255174119, -122.404195424821)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>THEFT</td>\n",
-       "      <td>Friday</td>\n",
-       "      <td>01/08/2016 12:00:00 AM</td>\n",
-       "      <td>14:30</td>\n",
-       "      <td>NORTHERN</td>\n",
-       "      <td>NONE</td>\n",
-       "      <td>1200 Block of VANNESS AV</td>\n",
-       "      <td>(37.7868516471087, -122.421441956086)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>DRUG</td>\n",
-       "      <td>Friday</td>\n",
-       "      <td>01/08/2016 12:00:00 AM</td>\n",
-       "      <td>15:46</td>\n",
-       "      <td>TENDERLOIN</td>\n",
-       "      <td>ARREST, BOOKED</td>\n",
-       "      <td>GOLDEN GATE AV / HYDE ST</td>\n",
-       "      <td>(37.7816542806076, -122.415508242782)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       Category DayOfWeek                    Date   Time  PdDistrict  \\\n",
-       "0  PROSTITUTION    Friday  01/08/2016 12:00:00 AM  12:00     CENTRAL   \n",
-       "1  PROSTITUTION    Friday  01/08/2016 12:00:00 AM  12:00     CENTRAL   \n",
-       "2  PROSTITUTION    Friday  01/08/2016 12:00:00 AM  12:00     CENTRAL   \n",
-       "5         THEFT    Friday  01/08/2016 12:00:00 AM  14:30    NORTHERN   \n",
-       "8          DRUG    Friday  01/08/2016 12:00:00 AM  15:46  TENDERLOIN   \n",
-       "\n",
-       "       Resolution                   Address  \\\n",
-       "0  ARREST, BOOKED    300 Block of KEARNY ST   \n",
-       "1  ARREST, BOOKED    300 Block of KEARNY ST   \n",
-       "2  ARREST, BOOKED    300 Block of KEARNY ST   \n",
-       "5            NONE  1200 Block of VANNESS AV   \n",
-       "8  ARREST, BOOKED  GOLDEN GATE AV / HYDE ST   \n",
-       "\n",
-       "                                Location  \n",
-       "0  (37.7912255174119, -122.404195424821)  \n",
-       "1  (37.7912255174119, -122.404195424821)  \n",
-       "2  (37.7912255174119, -122.404195424821)  \n",
-       "5  (37.7868516471087, -122.421441956086)  \n",
-       "8  (37.7816542806076, -122.415508242782)  "
+       "0         (37.7912255174119, -122.404195424821)\n",
+       "1         (37.7912255174119, -122.404195424821)\n",
+       "2         (37.7912255174119, -122.404195424821)\n",
+       "5         (37.7868516471087, -122.421441956086)\n",
+       "8         (37.7816542806076, -122.415508242782)\n",
+       "9         (37.7816542806076, -122.415508242782)\n",
+       "11        (37.7852071918419, -122.406690592261)\n",
+       "14        (37.7857828233879, -122.428151140162)\n",
+       "17        (37.7830791191471, -122.393622739343)\n",
+       "18         (37.786137125238, -122.419858277339)\n",
+       "20        (37.7640756627972, -122.403399653371)\n",
+       "23        (37.7830791191471, -122.393622739343)\n",
+       "24         (37.781863316866, -122.414302052544)\n",
+       "28        (37.7902088255652, -122.423156806774)\n",
+       "30        (37.7817511307229, -122.411071423064)\n",
+       "31        (37.7817511307229, -122.411071423064)\n",
+       "32        (37.7980205895825, -122.435679786498)\n",
+       "34          (37.78123525699, -122.418809581375)\n",
+       "36         (37.742315306831, -122.388192921769)\n",
+       "41         (37.775420706711, -122.403404791479)\n",
+       "42        (37.7745145380854, -122.452839772389)\n",
+       "43        (37.7430505534925, -122.475644251197)\n",
+       "49        (37.7971999610683, -122.427083705837)\n",
+       "51        (37.7314400806123, -122.450026603043)\n",
+       "53        (37.7858882195106, -122.411742515582)\n",
+       "56        (37.7863086885804, -122.416452065595)\n",
+       "60         (37.7774566611807, -122.41316085097)\n",
+       "61         (37.7852901068336, -122.39099120026)\n",
+       "62        (37.7827388378288, -122.445217147539)\n",
+       "64        (37.7195125768476, -122.474776541892)\n",
+       "                          ...                  \n",
+       "150171    (37.7804777480508, -122.412515341356)\n",
+       "150173    (37.7858926099715, -122.419739837805)\n",
+       "150174     (37.787148807979, -122.409876622532)\n",
+       "150175     (37.7806600950548, -122.42291369529)\n",
+       "150176     (37.8046348825476, -122.41426677512)\n",
+       "150177     (37.8046348825476, -122.41426677512)\n",
+       "150179     (37.7763172146255, -122.40838337313)\n",
+       "150181    (37.7739344794834, -122.446091525499)\n",
+       "150182     (37.774750702851, -122.416468768127)\n",
+       "150183    (37.7878271137225, -122.408384275542)\n",
+       "150190    (37.7285280627465, -122.475647460786)\n",
+       "150196    (37.7672442209616, -122.510225749052)\n",
+       "150199    (37.7833104067015, -122.388379873919)\n",
+       "150202    (37.7251072655052, -122.431252746655)\n",
+       "150203     (37.775420706711, -122.403404791479)\n",
+       "150210     (37.761292552214, -122.506994366516)\n",
+       "150211    (37.7778221483398, -122.492094631155)\n",
+       "150214    (37.7941169057941, -122.396556426173)\n",
+       "150215     (37.778293520129, -122.415448759562)\n",
+       "150216    (37.7323312464378, -122.378392257534)\n",
+       "150217     (37.775420706711, -122.403404791479)\n",
+       "150218    (37.7803348745141, -122.437236101904)\n",
+       "150219    (37.7422600519555, -122.387939452192)\n",
+       "150220    (37.7399451834026, -122.382742108888)\n",
+       "150221    (37.7760329501244, -122.411271940537)\n",
+       "150222    (37.7618358012376, -122.419360352761)\n",
+       "150223    (37.7618672648972, -122.419748993977)\n",
+       "150224    (37.7714278595913, -122.453981622365)\n",
+       "150226     (37.7437268170337, -122.48118317163)\n",
+       "150227     (37.775420706711, -122.403404791479)\n",
+       "Name: Location, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sf_df.head()"
+    "sf_df.Location"
    ]
   },
   {
